# metadata-cleaner

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .woodpecker.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  RELEASING.md  meson.build  meson_options.txt  meson_postinstall.py  metadata-cleaner.doap  metadata-cleaner.py.in  pyrightconfig.json  pyrightconfig.json.license
.forgejo/ISSUE_TEMPLATE/: bug-report.yaml
.github/workflows/: build.yml
.gitlab/issue_templates/: Translations need updating.md
.reuse/: dep5
application/: main.py  meson.build
application/data/: fr.romainvigier.MetadataCleaner.desktop.in  fr.romainvigier.MetadataCleaner.gresource.xml  fr.romainvigier.MetadataCleaner.metainfo.xml  fr.romainvigier.MetadataCleaner.service  fr.romainvigier.MetadataCleaner.service.in  meson.build
application/data/css/: style-dark.css  style.css
application/data/gtk/: help-overlay.ui
application/data/ui/: AboutDialog.ui  AddFilesButton.ui  Badge.ui  CleanMetadataButton.ui  CleaningWarningDialog.ui  DetailsView.ui  EmptyView.ui  FileRow.ui  FilesView.ui  InfoDetails.ui  MenuButton.ui  MetadataDetails.ui  MetadataDetailsRow.ui  OutButton.ui  SettingsButton.ui  StatusIndicator.ui  Window.ui
application/metadatacleaner/: __init__.py  app.py  meson.build
application/metadatacleaner/modules/: file.py  filestore.py  logger.py  metadata.py
application/metadatacleaner/ui/: addfilesbutton.py  badge.py  cleaningwarningdialog.py  cleanmetadatabutton.py  creditsrole.py  detailsview.py  emptyview.py  filechooserdialog.py  filerow.py  filesview.py  folderchooserdialog.py  menubutton.py  metadatadetails.py  metadatadetailsrow.py  metadataview.py  outbutton.py  settingsbutton.py  (+2 more)
application/po/: LINGUAS  POTFILES  ar.po  az.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  fr.romainvigier.MetadataCleaner.pot  fr.romainvigier.MetadataCleaner.pot.license  fy.po  gl.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  meson.build  nb_NO.po  nl.po  nn.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  si.po  (+11 more)
build-aux/: dev.geopjr.MetadataCleaner.Devel.json  dev.geopjr.MetadataCleaner.yaml  fr.romainvigier.MetadataCleaner.yaml  get_release_notes.py  postinstall.py  prepare_manifest.py
data/: dev.geopjr.MetadataCleaner.desktop.in  dev.geopjr.MetadataCleaner.gresource.xml  dev.geopjr.MetadataCleaner.gschema.xml  dev.geopjr.MetadataCleaner.metainfo.xml  dev.geopjr.MetadataCleaner.service.in  fr.romainvigier.MetadataCleaner.desktop.in  fr.romainvigier.MetadataCleaner.gresource.xml  fr.romainvigier.MetadataCleaner.gschema.xml  fr.romainvigier.MetadataCleaner.metainfo.xml  fr.romainvigier.MetadataCleaner.yaml  meson.build  style.css
data/css/: style.css
data/gtk/: help-overlay.ui  shortcuts-dialog.ui
data/screenshots/: 2.png.license
data/ui/: AboutDialog.ui  AboutMetadataPrivacyDialog.ui  AboutRemovingMetadataDialog.ui  AddFilesButton.ui  CleanMetadataButton.ui  CleaningWarningDialog.ui  CreditsRole.ui  DetailsView.ui  EmptyView.ui  FileButton.ui  FilePopover.ui  FileRow.ui  FilesView.ui  MenuButton.ui  MenuPopover.ui  MetadataDetails.ui  MetadataDetailsRow.ui  MetadataView.ui  MetadataWindow.ui  SaveFilesButton.ui  SaveWarningDialog.ui  SettingsButton.ui  ShortcutsDialog.ui  StatusIndicator.ui  Window.ui
help/: LINGUAS  meson.build
help/C/: fr.romainvigier.MetadataCleaner.pot  general.page  index.page  usage.page
help/ar/: ar.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/eo/: eo.po
help/es/: es.po
help/eu/: eu.po
help/fi/: fi.po
help/fr/: fr.po
help/fy/: fy.po
help/gl/: gl.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/lt/: lt.po
help/nb_NO/: nb_NO.po
help/nl/: nl.po
help/nn/: nn.po
help/oc/: oc.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/si/: si.po
help/sl/: sl.po
help/sr/: sr.po
help/sv/: sv.po
help/ta/: ta.po
help/tr/: tr.po
help/uk/: uk.po
help/ur/: ur.po
help/zh_CN/: zh_CN.po
help/zh_Hans/: zh_Hans.po
help/zh_TW/: zh_TW.po
metadatacleaner/: aboutdialog.py  aboutmetadataprivacydialog.py  aboutremovingmetadatadialog.py  app.py  cleanmetadatabutton.py  file.py  filebutton.py  filechooserdialog.py  filepopover.py  filerow.py  filesmanager.py  filesview.py  logger.py  menubutton.py  menupopover.py  metadatadetails.py  metadatawindow.py  savefilesbutton.py  savewarningdialog.py  shortcutsdialog.py  statusindicator.py  window.py
metadatacleaner/modules/: file.py  filestore.py
metadatacleaner/ui/: addfilesbutton.py  folderchooserdialog.py
po/: LINGUAS  POTFILES  ar.po  bn.po  ca.po  cs.po  da.po  de.po  de.po.license  dev.geopjr.MetadataCleaner.pot  eo.po  es.po  eu.po  fi.po  fr.po  fr.romainvigier.MetadataCleaner.pot  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  meson.build  nb_NO.po  nl.po  nn.po  oc.po  pt_BR.po  ru.po  si.po  sv.po  tr.po  ur.po
screenshots/: Dockerfile  application-1.ui  application-2.ui  application-3.ui  application-4.ui  application.css  common.css  help-add-files-button.ui  help-add-folders-button.css  help-add-folders-button.ui  help-clean-button.ui  help-metadata-example.css  help-metadata-example.ui  metadata-example.css  metadata-example.ui  screenshot.py  website.css  website.ui
src/: app.py  meson.build  metadata-cleaner.in
src/modules/: file.py  filestore.py  logger.py  meson.build  pride.py
src/ui/: __init__.py  addfilesbutton.py  badge.py  cleaningwarningdialog.py  cleanmetadatabutton.py  creditsrole.py  detailsview.py  dropoverlay.py  filerow.py  filesview.py  folderchooserdialog.py  menubutton.py  meson.build  metadatadetails.py  metadatadetailsrow.py  metadataview.py  settingsbutton.py  statusindicator.py  window.py
tests/: meson.build
website/: index.html  style.css
website/fonts/: WorkSans-Bold.woff.license
